Fri, 13 Jun 2008 09:37:45 +0200 <thp@perli.net>
Merge patch from Nick to add support for deleting played files on sync

	* data/gpodder.glade: Add check button for "Delete episodes on device
	that have been marked played in gPodder"
	* src/gpodder/config.py: Add two new config options:
	"mp3_player_delete_played" and "mp3_player_max_filename_length"
	* src/gpodder/gui.py: 
	* src/gpodder/libpodcasts.py: Add "is_deleted()" convenience function
	for a podcast episode
	* src/gpodder/sync.py: Clean-up and simplify parts of the code to make
	it better-structured and avoid code duplication; use the configuration
	variable for the MAX_FILENAME_LENGTH instead of hard-coding it to 100
	* src/gpodder/util.py: Split sanitize_filename() into two functions,
	detect_os_encoding() and sanitize_filename() for better code re-use
	(Closes: http://bugs.gpodder.org/show_bug.cgi?id=56; code written by
	Nick (nikosapi) and initial idea by Shane Donohoe, see the bug page)

Sun, 08 Jun 2008 20:08:58 +0200 <thp@perli.net>
Patch from Jérôme Chabod to fix "minimize on start" bug (#123)

	* src/gpodder/gui.py: Patch from Jérôme Chabod to fix "minimize on
	start" bug by moving the minimizing code after the "show window" code
	(Closes: http://bugs.gpodder.org/show_bug.cgi?id=123)

Sun, 08 Jun 2008 20:06:51 +0200 <thp@perli.net>
Updated Portuguese translation by João Paulo Pinto Trindade

	* data/po/pt.po: Updated PT translation by João Paulo Pinto Trindade

Thu, 05 Jun 2008 18:16:05 +0200 <thp@perli.net>
Improve/fix podcast list tooltips as suggested by the Usability Test

	* src/gpodder/gui.py: Restructure and redesign the podcast list
	according to the suggestions in the Usability Test
	* src/gpodder/libpodcasts.py: Add helping code for the new tooltips

Thu, 05 Jun 2008 18:12:20 +0200 <thp@perli.net>
New (optional) dependency: PIL (for Rockbox Cover Art)

	* README: Mention PIL as dependency for Rockbox Cover Art

Thu, 05 Jun 2008 18:10:11 +0200 <thp@perli.net>